# harmony-rpi-

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  README.md  client.cpp  client.h  config.h  control.cpp  main.cpp  mycallback.cpp  mycallback.h
callback/: mycallback.h
client/: client.cpp
control/: control.cpp  control.h
